force-app/main/default/objects/BLCTickets__c/BLCTickets__c.object-meta.xml
<CustomObject>
    <description>04.09.2017, ary: Objekt wurde nicht produktiv gestellt, da Prototyp. Ursprüngliche Idee war es, die Cases durch eine eigene Entwicklung abzulösen, damit alle User (Platform Lizenz) über Eingabemöglichkeiten direkt in Skywalk Tickets erfassen können.</description>
    <label>BLC Ticket</label>
    <nameField>
        <displayFormat>BT-{000000}</displayFormat>
        <label>BLC Ticket Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLC Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>