force-app/main/default/objects/BLCTickets__c/fields/AccountNameCustomer__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name (Customer)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>012b0000000cEKP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BLC Tickets (Account Name (Customer))</relationshipLabel>
    <relationshipName>BLC_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>