force-app/main/default/objects/BLCTickets__c/fields/BugReproduction__c.field-meta.xml
<CustomField>
    <fullName>BugReproduction__c</fullName>
    <inlineHelpText>Comment about how the bug can be reproduced.</inlineHelpText>
    <label>Bug Reproduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>