force-app/main/default/objects/BLCTickets__c/fields/ComputerRestartDidNotSolveTheIssue__c.field-meta.xml
<CustomField>
    <fullName>ComputerRestartDidNotSolveTheIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer restart did not solve the issue</label>
    <type>Checkbox</type>
</CustomField>