force-app/main/default/objects/BLCTickets__c/fields/DateTimeClosed__c.field-meta.xml
<CustomField>
    <fullName>DateTimeClosed__c</fullName>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>