force-app/main/default/objects/BLCTickets__c/fields/DateTimeOpened__c.field-meta.xml
<CustomField>
    <fullName>DateTimeOpened__c</fullName>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>