force-app/main/default/objects/BLCTickets__c/fields/DeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>DeadlineDate__c</fullName>
    <label>Deadline (Date)</label>
    <type>Date</type>
</CustomField>