force-app/main/default/objects/BLCTickets__c/fields/EmailSender__c.field-meta.xml
<CustomField>
    <fullName>EmailSender__c</fullName>
    <inlineHelpText>This field will be automatically populated with the email address from &quot;Email-To-BLCTicket&quot; sender.</inlineHelpText>
    <label>Email Sender</label>
    <type>Email</type>
</CustomField>