force-app/main/default/objects/BLCTickets__c/fields/EmailTicketInformation__c.field-meta.xml
<CustomField>
    <fullName>EmailTicketInformation__c</fullName>
    <inlineHelpText>This field will be automatically populated with the email address from internal &quot;BLC Ticket&quot; creator.</inlineHelpText>
    <label>Email Ticket Information</label>
    <type>Email</type>
</CustomField>