force-app/main/default/objects/BLCTickets__c/fields/FlagPriority__c.field-meta.xml
<CustomField>
    <fullName>FlagPriority__c</fullName>
    <formula>Case(Priority__c,
&quot;High&quot;,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
&quot;Medium&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;),
&quot;Low&quot;,IMAGE (&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Red&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag: Priority</label>
    <type>Text</type>
</CustomField>