force-app/main/default/objects/BLCTickets__c/fields/InventoryConcerned__c.field-meta.xml
<CustomField>
    <fullName>InventoryConcerned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Concerned</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>BLC Tickets</relationshipLabel>
    <relationshipName>BLC_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>