force-app/main/default/objects/BLCTickets__c/fields/ItIntern__c.field-meta.xml
<CustomField>
    <fullName>ItIntern__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>IT internal issues, not from users</inlineHelpText>
    <label>IT Intern</label>
    <type>Checkbox</type>
</CustomField>