force-app/main/default/objects/BLCTickets__c/fields/OnHoldUntil__c.field-meta.xml
<CustomField>
    <fullName>OnHoldUntil__c</fullName>
    <label>On Hold Until</label>
    <type>Date</type>
</CustomField>