force-app/main/default/objects/BLCTickets__c/fields/ParentBLCTicket__c.field-meta.xml
<CustomField>
    <fullName>ParentBLCTicket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent BLC Ticket</label>
    <referenceTo>BLCTickets__c</referenceTo>
    <relationshipLabel>Related BLC Tickets</relationshipLabel>
    <relationshipName>BLC_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>