force-app/main/default/objects/BLCTickets__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer affected</fullName>
            </value>
            <value>
                <fullName>All users affected</fullName>
            </value>
            <value>
                <fullName>Many users affected</fullName>
            </value>
            <value>
                <fullName>Induvidual users affected</fullName>
            </value>
            <value>
                <fullName>Blemish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>