force-app/main/default/objects/BLCTickets__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>