force-app/main/default/objects/BLCTickets__c/fields/ThirdPartyServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BLC Tickets</relationshipLabel>
    <relationshipName>IT_Helpdesk</relationshipName>
    <type>Lookup</type>
</CustomField>