force-app/main/default/objects/BLCTickets__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active Directory</fullName>
            </value>
            <value>
                <fullName>Amigo</fullName>
            </value>
            <value>
                <fullName>Censhare</fullName>
            </value>
            <value>
                <fullName>Credit card receipt</fullName>
            </value>
            <value>
                <fullName>Employee Entry</fullName>
            </value>
            <value>
                <fullName>Employee Exit</fullName>
            </value>
            <value>
                <fullName>Exchange / Mail</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Font Explorer / Schriften</fullName>
            </value>
            <value>
                <fullName>Former Employees</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Laptop DELL</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>MacBook</fullName>
            </value>
            <value>
                <fullName>Network / WLAN / VPN</fullName>
            </value>
            <value>
                <fullName>New Employee</fullName>
            </value>
            <value>
                <fullName>Office supplies</fullName>
            </value>
            <value>
                <fullName>Opix / SixOMC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Printer / Scanner</fullName>
            </value>
            <value>
                <fullName>PrintPlus</fullName>
            </value>
            <value>
                <fullName>Purchase / Invoice</fullName>
            </value>
            <value>
                <fullName>Restore Data</fullName>
            </value>
            <value>
                <fullName>Screen / TV / Projector</fullName>
            </value>
            <value>
                <fullName>Security / Lastpass / Password</fullName>
            </value>
            <value>
                <fullName>Server / Backup</fullName>
            </value>
            <value>
                <fullName>Skywalk</fullName>
            </value>
            <value>
                <fullName>Software / Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>