force-app/main/default/objects/BLCTickets__c/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workaround not available</fullName>
            </value>
            <value>
                <fullName>Workaround just with lot of effort available</fullName>
            </value>
            <value>
                <fullName>Workaround available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>