force-app/main/default/objects/BLCTickets__c/recordTypes/It.recordType-meta.xml
<RecordType>
    <fullName>It</fullName>
    <active>true</active>
    <label>IT</label>
</RecordType>